--- a/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/src/app/reactive/dinamicos/dinamicos.component.html
@@ -1,1 +1,68 @@
-<p>Reactivos dinámicos works!</p>
+<h2>Template: <small> Dinámicos </small></h2>
+<hr>
+
+<form (ngSubmit)="save()" [formGroup]="myForm" autocomplete="off">
+
+    <!-- Nombre -->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Nombre</label>
+        <div class="col-sm-9">
+            <input class="form-control" placeholder="Nombre de la persona" formControlName="nombre">
+
+            <span class="form-text text-danger" *ngIf="isValidField('nombre')">
+                Este campo es obligatorio
+            </span>
+        </div>
+    </div>
+
+    <!-- Añadir favorito -->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Agregar</label>
+        <div class="col-sm-9">
+            <div class="input-group">
+                <input class="form-control" placeholder="Agregar favorito">
+
+                <button class="btn btn-outline-primary" type="button">
+                    Agregar
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Lista de favoritos -->
+    <div class="mb-3 row">
+
+        <div class="col-sm-9" formArrayName="favoritos">
+            <div class="input-group mb-1" *ngFor="let favorito of favoritos.controls; let i = index">
+                <input class="form-control" [formControlName]="i">
+
+                <button class="btn btn-outline-danger" type="button"> Eliminar </button>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-12">
+            <button type="button" class="btn btn-primary float-end">
+                Guardar
+            </button>
+        </div>
+    </div>
+
+
+</form>
+
+<span>Valid</span>
+<pre>{{myForm.valid}}</pre>
+
+<span>Pristine</span>
+<pre>{{myForm.pristine}}</pre>
+
+<span>Touched</span>
+<pre>{{myForm.touched}}</pre>
+
+<span>Value</span>
+<pre>{{myForm.value | json}}</pre>
+
+<!-- <span> Persona</span>
+<pre>{{persona|json}}</pre> -->
