--- a/src/app/reactive/basicos/basicos.component.html
+++ b/src/app/reactive/basicos/basicos.component.html
@@ -1,1 +1,98 @@
-<p>Reactivos básicos works!</p>
+<h2>Template: Básicos</h2>
+<hr>
+
+<div class="row">
+    <div class="col">
+
+        <form (ngSubmit)="save()" [formGroup]="myForm" autocomplete="off">
+            
+            <!-- Campo de producto -->
+            <div class="mb-3 row">
+
+
+                <label class="col-sm-3 col-form-label">Producto</label>
+
+
+                <div class="col-sm-9">
+                    
+                    <input type="text"
+                           class="form-control"
+                           placeholder="Nombre del producto"
+                           formControlName="nombre">
+                            
+                    <span class="form-text text-danger"
+                    *ngIf="isValidField('nombre')">
+                        Debe de ser de 3 letras
+                    </span>
+                </div>
+            </div>
+
+
+
+
+
+
+
+            <!-- Campo de producto -->
+            <div class="mb-3 row">
+                <label class="col-sm-3 col-form-label">Precio</label>
+                <div class="col-sm-9">
+                    <input type="number"
+                           class="form-control"
+                           placeholder="Precio del producto"
+                           formControlName="precio">
+
+                           <span class="form-text text-danger"
+                           *ngIf="isValidField('precio')">
+                        Debe de ser mayor que cero
+                    </span>
+                </div>
+            </div>
+
+            <!-- Campo de existencias -->
+            <div class="mb-3 row">
+                <label class="col-sm-3 col-form-label">Existencias</label>
+                <div class="col-sm-9">
+                    <input type="number"
+                           class="form-control"
+                           placeholder="Existencias del producto"
+                           formControlName="existencias"
+                           >
+                           <span class="form-text text-danger" 
+                           *ngIf="isValidField('existencias')">
+                        Debe de ser mayor que cero
+                    </span>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="col">
+                    <button type="submit"
+                            class="btn btn-primary float-end"
+                            
+                            >
+                        Guardar
+                    </button>
+                </div>
+            </div>
+
+
+
+        </form>
+
+        <span>Valid</span>
+        <pre>{{myForm.valid}}</pre>
+
+        <span>Pristine</span>
+        <pre>{{myForm.pristine}}</pre>
+
+        <span>Touched</span>
+        <pre>{{myForm.touched}}</pre>
+
+        <span>Value</span>
+        <pre>{{myForm.value | json}}</pre>
+
+    </div>
+</div>
+
