--- a/src/app/reactive/switches/switches.component.html
+++ b/src/app/reactive/switches/switches.component.html
@@ -1,1 +1,93 @@
-<p> Reactivos switches works!</p>
+<h2>Template: Switches</h2>
+<hr>
+
+
+<form (ngSubmit)="save()" [formGroup]="myForm">
+
+    <!-- Radio -->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Género</label>
+        <div class="col-sm-9">
+
+            <div class="form-check">
+                <input class="form-check-input"
+                       type="radio"
+                       value="M"
+                       id="radioMasculino"
+                       formControlName="genero"
+                       >
+                <label class="form-check-label" for="radioMasculino">
+                  Masculino
+                </label>
+            </div>
+
+            <div class="form-check">
+                <input class="form-check-input"
+                       type="radio"
+                       value="F"
+                       id="radioFemenino"
+                       formControlName="genero"
+                       >
+                <label class="form-check-label" for="radioFemenino">
+                  Femenino
+                </label>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- Switches -->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Notificaciones</label>
+        <div class="col-sm-9">
+
+            <div class="form-check form-switch mt-2">
+                <input class="form-check-input"
+                       type="checkbox"
+                       id="flexSwitchCheckChecked"
+                       formControlName="notificaciones"
+                       >
+                <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- Switches -->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label"></label>
+        <div class="col-sm-9">
+            <div class="form-check">
+                <input class="form-check-input"
+                       type="checkbox"
+                       id="flexCheckDefault"
+                       formControlName="terminos"
+                       >
+                <label class="form-check-label" for="flexCheckDefault">
+                  Términos y condiciones de uso
+                </label>
+            </div>
+        </div>
+    </div>
+    
+
+    <!-- Boton submit -->
+    <div class="row">
+        <div class="col">
+            <button class="btn btn-primary float-end" [disabled]="myForm.invalid">
+                Guardar
+            </button>
+        </div>
+    </div>
+
+</form>
+
+<span>Persona</span>
+<pre>{{persona| json}}</pre>
+<br>
+<span>Valid</span>
+<pre> {{myForm.valid}}</pre>
+<br>
+
+<span>Form</span>
+<pre> {{myForm.value|json}}</pre>
